# twitter-liked-to-discordbot

./: LICENSE  Readme.md  pyproject.toml  start.sh  twitter-liked-to-discordbot.py
cogs/: twitterliked2discordcog.py
cogs/modules/: aes_angou.py  liked_twitter.py  settings.py
cogs/modules/files/: .env.sample
